@@ -265,17 +265,17 @@ windRose <- function (mydata, ws = "ws", wd = "wd", ws.int = 2, angle = 30, type
             statistic <- "prop.count"
         }
 
-        if(statistic=="prop.count"){
+        if (statistic == "prop.count"){
             stat.fun <- length
             stat.unit <- "%"
             stat.scale <- "all"
             stat.lab <- "Frequency of counts by wind direction (%)"
-            stat.fun2 <- function(x) round(length(x), 1)
-            stat.lab2 <- "count"
+            stat.fun2 <- function(x) signif(mean(x, na.rm = TRUE), 3)
+            stat.lab2 <- "mean"
             stat.labcalm <- function(x) round(x, 1)
         }
 
-        if(statistic=="prop.mean") {
+        if (statistic == "prop.mean") {
             stat.fun <- function(x) sum(x, na.rm = TRUE)
             stat.unit <- "%"
             stat.scale <- "panel"
@@ -285,7 +285,7 @@ windRose <- function (mydata, ws = "ws", wd = "wd", ws.int = 2, angle = 30, type
             stat.labcalm <- function(x) round(x, 1)
         }
 
-        if(statistic=="abs.count" | statistic=="frequency") {
+        if (statistic == "abs.count" | statistic == "frequency") {
             stat.fun <- length
             stat.unit <- ""
             stat.scale <- "none"
@@ -371,20 +371,20 @@ windRose <- function (mydata, ws = "ws", wd = "wd", ws.int = 2, angle = 30, type
                               stat.fun)
 
         #scaling
-        if(stat.scale=="all"){
+        if (stat.scale == "all"){
               calm <- calm / all
-              weights <- weights/all
+              weights <- weights / all
         }
-        if(stat.scale=="panel"){
+        if (stat.scale == "panel"){
               temp <- stat.fun(stat.fun(weights)) + calm
-              calm <- calm/temp
-              weights <- weights/temp
+              calm <- calm / temp
+              weights <- weights / temp
         }
 
         weights[is.na(weights)] <- 0
         weights <- t(apply(weights, 1, cumsum))
 
-        if(stat.scale=="all" | stat.scale=="panel"){
+        if (stat.scale=="all" | stat.scale=="panel"){
             weights <- weights * 100
             calm <- calm * 100
         }
@@ -487,7 +487,7 @@ windRose <- function (mydata, ws = "ws", wd = "wd", ws.int = 2, angle = 30, type
     #rethink next bit?
     #error catcher for users setting too big grid.line
     ##########
-    if(myby/mymax > 0.9)
+    if(myby / mymax > 0.9)
           myby <- mymax * 0.9
 
 
