@@ -5,6 +5,7 @@ Changes in openair 0.5-17 [2012-01-12]
 *	Fix regression in importKCL that was intruduced in 0.5-21
 *	Make sure wd data are rounded to 10 degrees in polarFreq
 *	Fix date padding issue in smoothTrend when type = "site"
+*	windRose now gives mean ws in each panel rather than count
 
 Changes in openair 0.5-21 [2012-02-21]
 *	Use C++ code for rolling mean calcs. Much faster, more to
